clang/test/BSC/Negative/InitAnalysis/init-struct-field-nested.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// Test BSCIR init analysis: nested struct partial init produces error.

struct Inner { int a; int b; };
struct Outer { struct Inner inner; int c; };

_Safe void test_nested_partial(void) {
    struct Outer o;
    o.inner.a = 1;
    o.c = 3;
    int val = o.inner.b; // expected-error {{use of uninitialized value: `o.inner.b`}}
}
